2nd Update index.html
add mastodon verification link

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <a href="https://x.com/RcShxh" class="link twitter">Twitter</a>
             <a href="https://www.pinterest.com/RcShxh" class="link pinterest">Pinterest</a>
             <a href="https://medium.com/@jupheth" class="link medium">Medium</a>
-            <a href="https://mastodon.online/@ahuon" class="link mastodon">Mastodon</a>
+            <a href="https://mastodon.online/@ahuon" class="link mastodon" rel="me">Mastodon</a>
         </div>
     </div>
 </body>
